fix error in overflow hidden

--- a/src/components/sections/about me/about.css
+++ b/src/components/sections/about me/about.css
@@ -68,6 +68,8 @@
     position: absolute;
     top: 95%;
     right: 95%;
+    filter: drop-shadow(0 2px 6px var(--sf-dark));
+    z-index: 1;
 }
 
 .about-container .float:nth-child(1){
