--- a/src/components/sections/intro/intro.css
+++ b/src/components/sections/intro/intro.css
@@ -2,7 +2,6 @@
     position: relative;
     min-height: fit-content;
     width: 100%;
-    overflow: hidden;
     box-sizing: border-box;
 }
 
@@ -119,6 +118,7 @@
     display: flex;
     align-items: center;
     justify-content: right;
+    border-radius: 12px;
     width: 100%;
     height: 340px;
     background: linear-gradient(to right, var(--bg-dark) 0%, var(--sf-dark) 100%);
@@ -129,6 +129,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    border-radius: 12px;
     top: 30px;
     left: 30px;
     border: 2px solid color-mix(in srgb, var(--sf-dark), transparent 50%);
@@ -150,6 +151,7 @@
 @media (max-width: 768px) {
     .intro-container{
         padding: 0px 10px;
+        overflow: hidden;
     }
 
     .intro-container .content{
